fixed some text styling and spacing

--- a/style.css
+++ b/style.css
@@ -11,14 +11,19 @@ body {
   color: hsl(237, 12%, 33%);
 }
 
-h1 {
+.col-6 {
+  padding: 0;
+}
+
+h2 {
   font-weight: 700;
   margin: 0;
+  padding-bottom: 30px;
 }
 
 .container {
   margin: 100px auto;
-  width: 1040px;
+  width: 960px;
 }
 
 .app {
@@ -59,7 +64,6 @@ h1 {
   font-size: 12px;
   position: relative;
   height: 0;
-  text-align: justify;
   overflow: hidden;
   transition: 0.5s;
 }
@@ -79,6 +83,7 @@ h1 {
 
 .accordion .accordion-item.active .label {
   font-weight: 700;
+  color: black;
 }
 
 .accordion-item {
@@ -104,7 +109,7 @@ h1 {
   position: absolute;
   display: flex;
   width: 100%;
-  transform: translateY(45%);
+  transform: translateY(15%);
   left: -50px;
   z-index: 1;
 }
@@ -121,8 +126,6 @@ h1 {
 .attribution {
   font-size: 11px;
   text-align: center;
-  margin-top: 100px;
-  /* edit margin later */
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
